# UltimatePlayerTracker

./: .gitignore  AGENTS.md  README.md  animated-scatter.py  convert_tflite.py  convert_trt.py  object_tracker.py  object_tracker_tensorflow_legacy.py  pyproject.toml  save_model.py  test_yolov10_integration.py  yolo26-migration-research.md
Project/: baseline-metrics.md  environment-setup.md  model-selection-report.md  plan-tooling-migration.md  plan-yolov10-migration.md  progress-tracker.md  yolov10-migration-progress.md
core/: README.md  backbone.py  common.py  config.py  dataset.py  utils.py  yolov4.py
deep_sort/: detection.py  iou_matching.py  kalman_filter.py  linear_assignment.py  nn_matching.py  preprocessing.py  tracker.py
outputs/: locations-tiny.csv  locations.csv  locations_1.csv  locations_limited.csv  locations_lims-tiny.csv
tools/: freeze_model.py  generate_detections.py
yolov10/: __init__.py  config.py  detection_adapter.py  inference.py  model_loader.py  utils.py
yolov26/: __init__.py  config.py  detection_adapter.py  inference.py  model_loader.py  utils.py
